[package]
name = "pxlBurn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {version = "0.3.23", default-features=true}
geo = { version =  "0.18.0" }
geojson= { version = "0.22.2", features = ["geo-types"] }
gdal = "0.9.0"
geo-types = "0.7.2"
indicatif = "0.16.2"
crossbeam = "0.8.1"
num_cpus = "1.13.0"
linya = "0.2.1"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3


